fix spacing

--- a/wp-content/themes/sixgill/css/custom/tablet_solutions.css
+++ b/wp-content/themes/sixgill/css/custom/tablet_solutions.css
@@ -36,7 +36,7 @@
 	}
 
 	.solutions-subpage-text ol {
-		padding-left: 30px;
+		padding-left: 25px;
 	}
 
 }
