--- a/wp-content/themes/sixgill/css/custom_build.css
+++ b/wp-content/themes/sixgill/css/custom_build.css
@@ -1075,7 +1075,7 @@ section {
 	}
 
 	.solutions-subpage-text ol {
-		padding-left: 30px;
+		padding-left: 25px;
 	}
 
 }
